# zem

./: README.md
backend/: .gitignore  CMakeLists.txt  CMakePresets.json  Main.cpp  README.md  build_env_setup.sh  vcpkg.json
backend/Adapters/: CMakeLists.txt
backend/Adapters/Inbound/Tcp/: CMakeLists.txt
backend/Adapters/Inbound/Tcp/Base/: CMakeLists.txt  Server.hpp  Session.hpp
backend/Adapters/Inbound/Tcp/Handlers/Login/: LoginHandler.cpp  LoginHandler.hpp
backend/Adapters/Inbound/Tcp/Protocol/: IConnection.hpp  WireTypes.hpp
backend/Adapters/Inbound/Tcp/Protocol/Common/: ApiVersion.hpp  ByteCodec.hpp
backend/Adapters/Inbound/Tcp/Protocol/Login/: LoginCodec.cpp  LoginCodec.hpp
backend/Adapters/Inbound/Tcp/Protocol/Login/DTO/: LoginRequestDto.hpp  LoginResponseDto.hpp
backend/Adapters/Inbound/Tcp/Protocol/Login/V1/: LoginCodec.cpp  LoginCodec.hpp
backend/Adapters/Inbound/Tcp/Protocol/Login/V1/DTO/: LoginRequestDto.hpp  LoginResponseDto.hpp
backend/Adapters/Inbound/Tcp/Protocol/Service/: Protocol.hpp
backend/Adapters/Inbound/Tcp/Server/: CMakeLists.txt  TCPServer.cpp  TCPServer.hpp
backend/Adapters/Inbound/Tcp/Session/: CMakeLists.txt  TCPSession.cpp  TCPSession.hpp
backend/Adapters/Inbound/Tcp/Session/Common/: Limits.hpp  ThreadLocal.hpp  Timeouts.hpp
backend/Adapters/Outbound/Db/: CMakeLists.txt  PostgresAccountRepository.cpp  PostgresAccountRepository.hpp  PostgresRepositoryFactory.cpp  PostgresRepositoryFactory.hpp
backend/App/Bootstrap/: AppContext.cpp  AppContext.hpp  CMakeLists.txt
backend/Core/: CMakeLists.txt
backend/Core/Application/Commands/: ReceivingCommand.hpp
backend/Core/Application/Common/: Task.hpp
backend/Core/Application/Ports/Inbound/: ILoginUseCase.hpp
backend/Core/Application/Ports/Outbound/: IAccountRepository.hpp
backend/Core/Application/UseCases/: LoginUseCase.cpp  LoginUseCase.hpp
backend/Core/Domain/: LoginResult.hpp
backend/Document/: api_specification.md
backend/Tests/: CMakeLists.txt
backend/Tests/Adapters/Outbound/Dd/: PostgresRepositoryFactoryIntegrationTest.cpp
backend/Tests/Core/Application/UseCases/: LoginUseCaseMockTest.cpp  LoginUseCaseTest.cpp
